app/assets/stylesheets/application.tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/*

@layer components {
  .btn-primary {
    @apply py-2 px-4 bg-blue-200;
  }
}

*/

@keyframes animated-gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

.animate-gradient {
  background-size: 300%;
  -webkit-animation: animated-gradient 6s ease infinite alternate;
  -moz-animation: animated-gradient 6s ease infinite alternate;
  animation: animated-gradient 6s ease infinite alternate;
}

.mockup-code pre:before {
  margin-right: 0;
}

.mockup-code pre {
  padding-right: 0;
}

.toggle {
  box-shadow: var(--handleoffsetcalculator) 0 0 2px var(--tglbg) inset, 0 0 0 2px var(--tglbg) inset, var(--togglehandleborder) !important;
}

